# mujoco-sysid

./: README.md  append_mass.ipynb  cart_pole.ipynb  panda.ipynb  panda_sysid.ipynb  pyproject.toml  requirements.txt  skydio.ipynb  z1_vel_match.ipynb
.github/workflows/: build.yaml
_draft/: nonlinear_residuals.ipynb  opti_loss.ipynb  pendulum.py  pendulum_ref.py  quadrotor.json  rollout_error.py  utils.py
_notebooks/: README.md  dynamics_a1.ipynb  match_acceleration.ipynb  match_object_vel.ipynb
data/: ltv_lqr_traj.json  panda_data.json
data/models/cart_pole/: model.xml  scene.xml
data/models/pendulum/: pendulum.xml  scene.xml
data/models/two_link/: scene.xml  two-link.xml
data/trajectories/: skydio_easy.npz
data/trajectories/dc_motor/: Identification_traj_1.csv  Identification_traj_2.csv  Identification_traj_3.csv  Identification_traj_4.csv  Identification_traj_5.csv
data/trajectories/pendulum/: free_fall_1.csv  free_fall_2.csv  harmonic_input_1.csv  harmonic_input_2.csv  pendulum_1_1_0.1.csv
data/trajectories/pendulum/old/: pendulum_control_1.csv  pendulum_control_2.csv  pendulum_control_3.csv  pendulum_ff_1.csv  pendulum_ff_2.csv  pendulum_ff_3.csv
data/trajectories/two_link/: _model.py  two_link_observer_05_fast.csv  two_link_observer_05_norm.csv  two_link_observer_05_slow.csv  two_link_pd_ff.csv
examples/: TODO  a1_pd_render.ipynb  cart_pole.ipynb  match_acceleration.ipynb  match_energy.ipynb  match_object_vel.ipynb  match_rne.ipynb  mujoco_sysid_demo.ipynb  nonlinear_residuals.ipynb  offline.ipynb  opti_loss.ipynb  panda.ipynb  parametric_step.py  pendulum.py  pendulum_ref.py  skydio.ipynb  test.ipynb  utils.py
examples/go2/: 01_learning.py  template.py
examples/go2/data/: go2_twist_active.json
examples/pendulum/: 01_learning.py  01_simulation_error.py  02_learning.py  02_simulation_error.py  TODO
examples/pendulum/models/: .gitignore  pendulum.xml  pendulum_estimated.xml
mujoco_sysid/: __init__.py  convert.py  modeling.py  parameters.py  regressors.py  utils.py
mujoco_sysid/mjx/: convert.py  loss.py  model.py  parameters.py  regressors.py  residuals.py
scripts/: MUJOCO_LOG.TXT  panda.py  skydio.ipynb  skydio.py  trajectory.npz  utils.py  z1_load.ipynb
tests/: test_dynamics.py  test_energy.py  test_kinematics_muj_match.ipynb  test_mujoco_regressors.ipynb  test_parameters.py  test_pin_match.py  test_pin_regressor.ipynb
tests/mjx/: test_mjx_dynamics.py  test_mjx_energy.py  test_mjx_parameters.py
